--- a/styles/style.css
+++ b/styles/style.css
@@ -1,45 +1,86 @@
-body {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+html,
+body {
+    height: 100%;
+    margin: 0 auto;
     font-family: sans-serif, serif, monospace;
+    text-decoration: none;
+}
+body {
+    position: relative;
+}
+aside {
+    display: block;
+    position: fixed;
+    right: 5%;
+    top: 10%;
+}
+
+body li {
+    list-style-type: none;
+}
+body a {
+    text-decoration: none;
+}
+body a:hover {
+    text-decoration: underline;
+}
+body a:active {
+    text-shadow: 2px 2px 2px #ccc;
 }
 
 nav {
-    height: 140px;
-    background-color: #E6E6FA;
-    border: 2px solid #D8C4C4
+    height: 5em;
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
+    padding-top: 1em;
 }
 
+header ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+header ul li {
+    display: block;
+    width: 16%;
+}
+header ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
 
 nav form {
-    height: 30px;
-    border: 2px solid #D8C4C4
-}
+    height: 2em;
+ }
 
-main {}
+
+main {
+    width: 90%;
+    margin: 0 auto;
+}
 
 main h1 {
-
-    font-size: 40px;
+    font-size: 2em;
     font-weight: 300;
     color: #2e353d;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-main section {
-
-    background-color: floralwhite;
+    text-align: center;
 }
 
 main section p {
     font-size: 20px;
     font-weight: 100;
-
 }
 
 main article {
-
     font-size: 25px;
     font-weight: 300;
     color: #2e353d;
@@ -48,22 +89,45 @@ main article {
     align-content: center;
 }
 
-
-
-aside {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-around;
-
+footer {
+    height: 3em;
+    background-color: #9d9db0;
+    text-align: center;
+    padding-top: 1em;
 }
 
+/* LIGHT THEME*/
+.light_theme body a {
+    color: #6c6c6c;
+}
 
-footer {
-    height: 50px;
-    background-color: #7F7F7F;
-    border: 2px solid #BFBFBF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.light_theme body a:hover {
+    background-color: #ceceec;
+}
+
+.container.light_theme {
+    background-color: none;
+}
+.light_theme nav {
+    background-color: #E6E6FA;
+}
+.light_theme main section {
+    background-color: #f0e3e5;
+}
+/* DARK THEME*/
+.dark_theme body a {
+    color: #fefefe;
+}
+.container.dark_theme  {
+    background-color: #2f2e2e;
+}
+.dark_theme body a:hover {
+    background-color: #f58484;
+}
+
+.dark_theme nav {
+    background-color: #8dbbe2;
+}
+.dark_theme main section {
+    background-color: #414141;
 }
